[gd_scene load_steps=77 format=2]

[ext_resource path="res://Sprites/Bebidas/Bebidas3.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Bebidas/Bebidas6.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Bebidas/Bebidas1.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Bebidas/Bebidas11.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Bebidas/Bebidas5.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Bebidas/Bebidas4.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/Bebidas/Bebidas13.png" type="Texture2D" id=7]
[ext_resource path="res://Sprites/Bebidas/Bebidas14.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/Bebidas/Bebidas10.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/Bebidas/Bebidas9.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/Bebidas/Bebidas15.png" type="Texture2D" id=11]
[ext_resource path="res://Sprites/Bebidas/Bebidas7.png" type="Texture2D" id=12]
[ext_resource path="res://Sprites/Bebidas/Bebidas2.png" type="Texture2D" id=13]
[ext_resource path="res://Sprites/Bebidas/Bebidas8.png" type="Texture2D" id=14]
[ext_resource path="res://Sprites/Bebidas/Bebidas12.png" type="Texture2D" id=15]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas16.png" type="Texture2D" id=16]
[ext_resource path="res://Sprites/Celular/Celular3.png" type="Texture2D" id=17]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas1.png" type="Texture2D" id=18]
[ext_resource path="res://Sprites/Celular/Celular4.png" type="Texture2D" id=19]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas5.png" type="Texture2D" id=20]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas7.png" type="Texture2D" id=21]
[ext_resource path="res://Sprites/Celular/Celular5.png" type="Texture2D" id=22]
[ext_resource path="res://Sprites/Celular/Celular7.png" type="Texture2D" id=23]
[ext_resource path="res://Sprites/Celular/Celular8.png" type="Texture2D" id=24]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas10.png" type="Texture2D" id=25]
[ext_resource path="res://Sprites/Celular/Celular6.png" type="Texture2D" id=26]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas15.png" type="Texture2D" id=27]
[ext_resource path="res://Sprites/Celular/Celular9.png" type="Texture2D" id=28]
[ext_resource path="res://Sprites/Celular/Celular11.png" type="Texture2D" id=29]
[ext_resource path="res://Sprites/Celular/Celular15.png" type="Texture2D" id=30]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0002.png" type="Texture2D" id=31]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0003.png" type="Texture2D" id=32]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0005.png" type="Texture2D" id=33]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas11.png" type="Texture2D" id=34]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas12.png" type="Texture2D" id=35]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas2.png" type="Texture2D" id=36]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0007.png" type="Texture2D" id=37]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0008.png" type="Texture2D" id=38]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0010.png" type="Texture2D" id=39]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0004.png" type="Texture2D" id=40]
[ext_resource path="res://Sprites/Celular/Celular2.png" type="Texture2D" id=41]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas4.png" type="Texture2D" id=42]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas3.png" type="Texture2D" id=43]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas6.png" type="Texture2D" id=44]
[ext_resource path="res://Sprites/Celular/Celular13.png" type="Texture2D" id=45]
[ext_resource path="res://Sprites/Celular/Celular12.png" type="Texture2D" id=46]
[ext_resource path="res://Sprites/Celular/Celular1.png" type="Texture2D" id=47]
[ext_resource path="res://Sprites/Celular/Celular10.png" type="Texture2D" id=48]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas14.png" type="Texture2D" id=49]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas13.png" type="Texture2D" id=50]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0006.png" type="Texture2D" id=51]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0009.png" type="Texture2D" id=52]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas9.png" type="Texture2D" id=53]
[ext_resource path="res://Sprites/Celular/Celular14.png" type="Texture2D" id=54]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0011.png" type="Texture2D" id=55]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0001.png" type="Texture2D" id=56]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas8.png" type="Texture2D" id=57]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0015.png" type="Texture2D" id=58]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0012.png" type="Texture2D" id=59]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0013.png" type="Texture2D" id=60]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0016.png" type="Texture2D" id=61]
[ext_resource path="res://Sprites/Soninho/Sprite2D-0014.png" type="Texture2D" id=62]
[ext_resource path="res://Cenas/Scripts/Debufs.gd" type="Script" id=63]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 13, 13 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 41 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 48 ), ExtResource( 29 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 54 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 12, 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 36 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 20 ), ExtResource( 44 ), ExtResource( 21 ), ExtResource( 57 ), ExtResource( 53 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 27 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
size = Vector2( 13, 13 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 56 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 51 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 52 ), ExtResource( 39 ), ExtResource( 55 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 58 ), ExtResource( 61 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
size = Vector2( 13, 13 )

[sub_resource type="Gradient" id=11]
colors = PackedColorArray( 0.614522, 0.614522, 0.614522, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=12]
gradient = SubResource( 11 )
width = 100

[sub_resource type="Curve" id=13]
max_value = 100.0
_data = [ Vector2( 0.011236, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 100 ), 809.212, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticleProcessMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 100.0
damping_random = 0.5
damping_curve = SubResource( 14 )
scale = 2.0
scale_random = 0.5
color_ramp = SubResource( 12 )

[node name="Debufs" type="Node2D"]
script = ExtResource( 63 )

[node name="Bebida" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bebida"]
frames = SubResource( 9 )
frame = 13
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bebida"]
shape = SubResource( 2 )

[node name="Celular" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Celular"]
frames = SubResource( 10 )
frame = 12
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Celular"]
shape = SubResource( 4 )

[node name="Carga Pesada" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Carga Pesada"]
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carga Pesada"]
shape = SubResource( 6 )

[node name="Sono" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sono"]
frames = SubResource( 7 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sono"]
shape = SubResource( 8 )

[node name="TimerBebida" type="Timer" parent="."]
wait_time = 12.3
one_shot = true

[node name="TimerSono" type="Timer" parent="."]
wait_time = 7.8
one_shot = true

[node name="TimerCarga" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TimerCelular" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2( 16, 16 )
emitting = false
amount = 150
lifetime = 0.6
one_shot = true
explosiveness = 0.6
process_material = SubResource( 15 )

[node name="TimerNecessario" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Bebida" to="." method="_on_Bebida_body_entered"]
[connection signal="body_entered" from="Celular" to="." method="_on_Celular_body_entered"]
[connection signal="body_entered" from="Carga Pesada" to="." method="_on_Carga_Pesada_body_entered"]
[connection signal="body_entered" from="Sono" to="." method="_on_Sono_body_entered"]
[connection signal="timeout" from="TimerBebida" to="." method="_on_TimerBebida_timeout"]
[connection signal="timeout" from="TimerSono" to="." method="_on_TimerSono_timeout"]
[connection signal="timeout" from="TimerCarga" to="." method="_on_TimerCarga_timeout"]
[connection signal="timeout" from="TimerCelular" to="." method="_on_TimerCelular_timeout"]
[connection signal="timeout" from="TimerNecessario" to="." method="_on_TimerNecessario_timeout"]
